css/main.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Ubuntu', sans-serif;
}

html {
    scroll-behavior: smooth;
}

:root {
    --blue-sapphire: #05668D;
    --steel-blue: #427AA1;
    --alice-blue: #EBF2FA;
    --maximum-green: #679436;
    --acid-green: #A5BE00;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: var(--acid-green);
}

p {
    opacity: 0.8;
}

/* mobile menu  */
.nav-links {
    color: white;
    font-size: 24px;
    text-transform: uppercase;
}

.nav-btn {
    border: none;
    background: transparent;
    cursor: pointer;
    font-size: 35px;
}

.open-nav {
    color: var(--acid-green);
    position: fixed;
    top: 25px;
    right: 10px;
}


.mobile {
    margin: auto;
    height: 100vh;
    transform: scale(0);
    overflow: hidden;
    display: none;
}

.visible {
     z-index: 3;
    width: 100vw;
    height: 100vh;
    display: block;
    position: fixed;
    opacity: .8;
    transform: scale(1);
}

.close-nav {
    color: var(--acid-green);
    opacity: 1;
    position: fixed;
    top: 105px;
    right: 10px;
    display: none;
    z-index: 4;
}

.call {
    cursor: pointer;
}

.header {
   text-align: center; 
   background-color: var(--blue-sapphire);
   height: 105px;
}

.desktop-menu-container {
    display: none;
}

.eis-logo {
    margin-top: 10px;
}

.nav ul {
    text-align: center;
    background-color: var(--blue-sapphire);
    height: 100vh;
}

.nav li {
    margin: 0px 0px 20px 0px;
    padding-top: 20px;
}

/* home section  */
.home-image-container,
.home-paragraph {
    text-align: center;
}

.home-image {
    width: 100vw;
    height: 389px;
}

.heading-one {
    color: var(--blue-sapphire);
    font-size: 28px;
    font-weight: 300;
    text-align: center;
    padding: 20px 0px;
}


.home-paragraph,
.heading-one,
#about {
    margin: 10px 15px;
}

.schedule-appointment-btn {
    text-align: center;
    margin: 35px 0px;
}

.appointment-btn,
.form-submit {
    border: none;
    border-radius: 20px;
    width: 197px;
    height: 39px;
    font-size: 16px;
    cursor: pointer;
}

.appointment-btn {
    color: white;
    background-color: var(--blue-sapphire);
}

.form-submit {
    background-color: white;
    color: var(--blue-sapphire);
}

/* product cards  */
.product-card {
    margin: auto;
    width: 308px;
    height: 200px;
    text-align: center;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
    margin-bottom: 20px;
    margin-top: 20px;
}

.card-container {
    position: relative;
    top: 25px;
}


.product-card p {
    font-size: 18px;
    font-weight: 700;
    color: black;
}

.product-icon {
    font-size: 82px;
    margin: 10px 0px;
}

.green {
    color: var(--acid-green);
}

.blue {
    color: var(--steel-blue);
}

/* about section  */

#about {
    margin-bottom: 50px;
}

#about p,
.about-image {
    margin: 20px 0px;
}

.about-image-container,
.about-para p {
   text-align: center;
}

#about h2 {
    text-align: center;
    margin: 10px 0px;
    color: var(--blue-sapphire);
}

.about-para p {
    margin-bottom: 0px 40px 20px 40px;
}

/* testimonials section  */

.testimonials-container {
    min-height: 80vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background: rgba(235, 235, 235, 0.5);
}

.testimonial {
    height: 280px;
    width: 80vw;
    margin: 10px;
    padding: 40px 20px 20px;
    background: white;
    border-top: 4px solid var(--acid-green);
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
    border-radius: 5px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    animation: fade 0.2s;
}

/* animation for testimonial slideshow  */

@keyframes fade {
    from {
        opacity: 0.4;
    }

    to {
        opacity: 1;
    }
}

.testimonial-img {
    height: 40px;
    width: auto;
    margin-bottom: 20px;
}

.testimonial p {
    font-style: oblique;
    font-size: 14px;
    overflow: auto;
}

.page {
    font-size: 12px;
    margin-top: 20px;
    opacity: 0.6;
}

.previous,
.next {
    display: inline-block;
    background: white;
    box-shadow: 0 2px 4px 1px rgba(50, 50, 93, 0.1);
    width: 30px;
    height: 30px;
    border-radius: 50%;
    padding: 5px;
    margin: 5px;
    font-size: 20px;
    text-align: center;
    color: var(--blue-sapphire);
}

.previous:hover,
.next:hover {
    cursor: pointer;
    transform: translateY(-4px);
}

/* contact form  */

.form-container {
    background-color: var(--blue-sapphire);
    padding-top: 50px;
    padding-bottom: 50px;
}

.heading-form {
    color: white;
    font-size: 28px;
    font-weight: 300;
    text-align: center;
    padding: 20px 0px;
}

.contact-form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}


.contact-form input,
.contact-form textarea {
    border-radius: 5px;
    border: none;
    width: 254px;
    margin: 10px;
    padding: 5px;
}

.contact-form input {
    width: 254px;
    height: 35px;
}

.form-btn {
    text-align: center;
    margin: 20px;
}

/* footer section  */

#footer {
    text-align: center;
    color: var(--blue-sapphire);
    padding: 20px 0px;
}

.footer-logo {
    margin: 10px;
}

.info {
    font-size: 14px;
    width: 250px;
    padding: 25px 0px;
    line-height: 149.4%;
    text-align: left;
    margin: auto;
}


/* tablet media queries  */

@media(min-width: 768px) {

    .home-image {
        width: 100vw;
        height: 589px;
    }

    .card-desktop-grid {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
}


/* desktop media queries  */

@media(min-width: 1023px) {

    .desktop-menu-container {
        display: block;
    }

    .body {
        font-size: 18px;
    }

    .open-nav {
        display: none;
    }

    .header {
        display: flex;
        justify-content: space-evenly;
        align-items: center;
    }

    .desktop {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .desktop li {
        padding: 10px;
    }

    .sticky {
        position: fixed;
        top: 0;
        width: 100%;
        z-index: 5;
        transition: 0.3s top ease;
    }

    .nav-desktop {
        color: white;
        font-size: 20px;
    }

    .active {
        color: var(--blue-sapphire);
        background-color: white;
        padding: 10px;
        border-radius: 5px;
     }
    
    .nav-desktop:hover {
        color: var(--maximum-green);
    }

    .header .desktop-menu-container button {
        color: var(--blue-sapphire);
        background-color: white;
        border: none;
        border-radius: 10px;
        width: 107px;
        height: 39px;
        font-size: 18px;
    }

    #home {
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        grid-template-areas: 
        "info info img img";
    }

    .heading-one {
        font-size: 32px;
        margin: 2% 0px;
    }

    .home-image-container{
        grid-area: img;
    }

    .home-image {
        width: 90%;
        height: 80%;
        text-align: center;
        margin-top: 60px;
    }

    .home-paragraph {
        margin-bottom: 40px;
        line-height: 149.4%;
        font-size: 18px;
        width: 90%;
    }

    .greeting {
        grid-area: info;
        padding: 20px;
        margin: 0px 40px;
        position: relative;
        top: 60px;
    }

    .appointment-btn,
    .form-submit {
        width: 397px;
        height: 49px;
        font-size: 24px
    }

    #products {
        padding-top: 150px;
    }

    .card-desktop-grid {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
    }

    #about {
        padding-top: 150px;
    }

    .about-grid {
        display: grid;
        grid-template-areas: 
        "img1 text1"
        "text2 img2";
        justify-content: end;
        align-items: center;
        margin: 0px 20%;
    }

    #about-image-one {
        grid-area: img1;
    }

    #para-one{
        grid-area: text1;
    }

    #about-image-two{
        grid-area: img2;
    }

    #para-two{
        grid-area: text2;
    }

    #testimonials {
        padding-top: 150px;
    }

    .testimonials-container {
        min-height: 50vh;
        padding-bottom: 5%;
    }

    .testimonial {
        width: 40vw;
    }

    .heading-form {
        font-size: 32px;
    }

    .contact-form {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        justify-content: center;
        align-items: center;
        margin: auto;
        max-width: 600px;
    }

    #message {
        grid-column: span 2;
        width: 550px;
    }

    #footer {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        justify-content: center;
        align-items: center;
    }

    .copyright {
        grid-column: span 2;
    }

}

